[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
arrayvec = "0.7.6"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
libc = "0.2.168"
rustix = { version = "0.38.42", features = ["mm", "shm"] }
shared = { path = "../shared" }
